[package]
name = "roxmltree_to_serde"
version = "0.6.0"
edition = "2021"
authors = ["Alec Troemel <alec@mirusresearch.com>", "Max Voskob <max@onebro.me>", "Marco Mengelkoch"]
description = "Convert between XML JSON using roxmltree and serde"
repository = "https://github.com/marcomq/roxmltree_to_serde"
keywords = ["json", "xml", "xml2json", "xml_to_json"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
roxmltree = "0.18.0"
regex = "1.8.3"

[features]
json_types = [] # Enable to enforce fixed JSON data types for certain XML nodes
regex_path = ["json_types"] # Enable Regex matching for JSON types
